--- a/index.html
+++ b/index.html
@@ -4,10 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidad - INVÍAS Rural</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background: #ffffff;
+            padding: 2rem;
+            max-width: 800px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+        h1 {
+            color: #0066cc;
+        }
+        p {
+            margin-bottom: 1.2rem;
+        }
+        footer {
+            margin-top: 2rem;
+            text-align: center;
+            font-size: 0.9rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
-    <h1>Política de Privacidad</h1>
-    <p>En la aplicación INVÍAS Rural, no recopilamos ningún dato personal de los usuarios. La aplicación está diseñada exclusivamente para facilitar la gestión y publicación de información relacionada con las experiencias rurales. No recolectamos información de contacto, ubicación, ni ningún dato sensible.</p>
-    <p>Si tienes alguna pregunta sobre esta política de privacidad, por favor contáctanos a través de nuestro soporte técnico.</p>
+    <div class="container">
+        <h1>Política de Privacidad</h1>
+        <p>En la aplicación INVÍAS Rural, no recopilamos ningún dato personal de los usuarios. La aplicación está diseñada exclusivamente para facilitar la gestión y publicación de información relacionada con las experiencias rurales. No recolectamos información de contacto, ubicación, ni ningún dato sensible.</p>
+        <p>Si tienes alguna pregunta sobre esta política de privacidad, por favor contáctanos a través de nuestro soporte técnico.</p>
+        <footer>
+            &copy; 2024 INVÍAS Rural. Todos los derechos reservados.
+        </footer>
+    </div>
 </body>
 </html>
